src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>UM_AccountOwnerProfile__c</fullName>
        <description>Field to capture Account owner&apos;s profile name</description>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UM_AccountOwnerProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Analog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_BankAccountNumberBic__c</fullName>
        <label>BIC code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BankAccountType__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_BankAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_DetailedIndustryClassification__c</fullName>
        <label>Detailed Industry Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UM_IndustryClassification__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>UM_DetailedIndustryClassification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_IBANValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IBAN Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_IndustryClassification__c</fullName>
        <label>Industry Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_IndustryClassification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Kenan_Sync_Message__c</fullName>
        <label>Kenan Sync Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_LastSyncedwithBilling__c</fullName>
        <label>Last Synced with Billing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UM_Legal_Name__c</fullName>
        <label>Account Name Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_P_LT_Calculation__c</fullName>
        <defaultValue>0.1</defaultValue>
        <description>Calculation LT * (always for the full month) Product Company Internet + Fiber</description>
        <inlineHelpText>Calculation LT * (always for the full month) Product Company Internet + Fiber</inlineHelpText>
        <label>LT Calculation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UM_P_Manager__c</fullName>
        <label>Manager</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_P_OT_Calculation__c</fullName>
        <defaultValue>&quot;OTx3&quot;</defaultValue>
        <description>Calculation OT Product Company Internet + Fiber</description>
        <inlineHelpText>Calculation OT Product Company Internet + Fiber</inlineHelpText>
        <label>OT Calculation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_P_Partner_Level__c</fullName>
        <label>Partner Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competence partner</fullName>
                    <default>true</default>
                    <label>Competence partner</label>
                </value>
                <value>
                    <fullName>Service partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_P_Sales_ID_BW__c</fullName>
        <label>Sales ID BW</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_P_Sales_ID_NRW_HSN__c</fullName>
        <label>Sales ID NRW/HSN</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_P_Special_agreement__c</fullName>
        <label>Special agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UM_P_Special_offers__c</fullName>
        <description>(eg follow. B. WIFI etc. and Promo&apos;s)</description>
        <inlineHelpText>(eg follow. B. WIFI etc. and Promo&apos;s)</inlineHelpText>
        <label>Special offers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UM_P_Vendor_no__c</fullName>
        <label>Vendor no.</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_PostalGeolocation__c</fullName>
        <label>Postal Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>UM_Postal_State__c</fullName>
        <label>Postal State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>NRW</fullName>
                </value>
                <value>
                    <fullName>HSN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_VisitGeolocation__c</fullName>
        <label>Visit Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>UM_VisitStateProvince__c</fullName>
        <label>Visit State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscfga__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cspmb__Discount_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Level</label>
        <referenceTo>cspmb__Discount_Level__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>LG_ChamberOfCommerceNumber__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>LG_Footprint__c</columns>
        <columns>LG_VisitCity__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>LG_NEWSalesChannel__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LG_MyAccountLeadsFollowUp</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>LG_VisitStreet__c</columns>
        <columns>LG_VisitHouseNumber__c</columns>
        <columns>LG_VisitHouseNumberExtension__c</columns>
        <columns>LG_VisitCity__c</columns>
        <columns>LG_VisitPostalCode__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_AccountLeadStatus__c</field>
            <operation>equals</operation>
            <value>Contacted - Follow up</value>
        </filters>
        <label>My Account Leads - Follow Up</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>LG_MyAccountsLeads</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>LG_AccountLeadStatus__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>LG_VisitStreet__c</columns>
        <columns>LG_VisitHouseNumber__c</columns>
        <columns>LG_VisitHouseNumberExtension__c</columns>
        <columns>LG_VisitPostalCode__c</columns>
        <columns>LG_VisitCity__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LG_AccountLeadStatus__c</field>
            <operation>equals</operation>
            <value>,Not Contacted</value>
        </filters>
        <label>My Account Leads</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>LG_MyCustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>LG_ChamberOfCommerceNumber__c</columns>
        <columns>LG_Segment__c</columns>
        <columns>LG_Footprint__c</columns>
        <columns>LG_ReadyForService__c</columns>
        <columns>LG_VisitCity__c</columns>
        <columns>LG_VisitPostalCode__c</columns>
        <columns>LG_VisitStreet__c</columns>
        <columns>LG_VisitHouseNumber__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>LG_Interest__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer,Qualified Lead</value>
        </filters>
        <label>Meine Kunden</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LG_MyQualifiedLeads</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>LG_ChamberOfCommerceNumber__c</columns>
        <columns>LG_Segment__c</columns>
        <columns>LG_Footprint__c</columns>
        <columns>LG_ReadyForService__c</columns>
        <columns>LG_VisitCity__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>LG_Interest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Qualified Lead</value>
        </filters>
        <label>Meine qualifizierten Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>UM_P_Partner_Level__c</columns>
        <columns>UM_P_Vendor_no__c</columns>
        <columns>UM_P_OT_Calculation__c</columns>
        <columns>UM_P_LT_Calculation__c</columns>
        <columns>UM_P_Sales_ID_NRW_HSN__c</columns>
        <columns>UM_P_Sales_ID_BW__c</columns>
        <columns>UM_P_Special_agreement__c</columns>
        <columns>UM_P_Special_offers__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner</value>
        </filters>
        <label>Partner</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>CSADetails</fullName>
        <active>false</active>
        <label>CSADetails</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>Record type for all employees</description>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <description>This is the record type for Partners</description>
        <label>Partner</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>B2B_Bankruptcy_Flag_and_Date_Check</fullName>
        <active>true</active>
        <description>If Bankruptcy Warning flag is check then bankruptcy date should not be blank</description>
        <errorConditionFormula>OR(
	AND(B2B_Bankruptcy_Warning__c,  OR(  ISBLANK( B2B_Bankruptcy_Date__c ), ISNULL(B2B_Bankruptcy_Date__c )  )),
	AND(NOT(PRIORVALUE(B2B_Bankruptcy_Warning__c)), NOT(B2B_Bankruptcy_Warning__c),NOT(OR(  ISBLANK( B2B_Bankruptcy_Date__c ), ISNULL(B2B_Bankruptcy_Date__c ) ) ) )
)</errorConditionFormula>
        <errorDisplayField>B2B_Bankruptcy_Date__c</errorDisplayField>
        <errorMessage>Select bankruptcy date if/when bankruptcy warning flag is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_AccountPostalAddressRequired</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK( LG_PostalCity__c ) || ISBLANK( LG_PostalHouseNumber__c ) || ISBLANK( LG_PostalPostalCode__c ) || ISBLANK( LG_PostalStreet__c )) &amp;&amp; NOT ISPICKVAL( Type, &apos;Partner&apos; ) &amp;&amp; $Setup.LG_ProfileExtensions__c.LG_DWHUser__c &lt;&gt; 1 &amp;&amp; $RecordType.Name=&quot;Master&quot;</errorConditionFormula>
        <errorDisplayField>LG_PostalStreet__c</errorDisplayField>
        <errorMessage>Postal Postal Code, Postal Street, Postal House Number, Postal City,Postal Country are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_AccountVisitAddressRequired</fullName>
        <active>true</active>
        <description>Validate if the Visit Address has the required fields</description>
        <errorConditionFormula>(ISBLANK( LG_VisitCity__c ) || ISBLANK( LG_VisitHouseNumber__c ) || ISBLANK( LG_VisitPostalCode__c ) || ISBLANK( LG_VisitStreet__c )) &amp;&amp; $Setup.LG_ProfileExtensions__c.LG_DWHUser__c &lt;&gt; 1 &amp;&amp;   $RecordType.Name=&quot;Master&quot;</errorConditionFormula>
        <errorDisplayField>LG_VisitStreet__c</errorDisplayField>
        <errorMessage>Visit Postal Code, Visit Street, Visit House Number, Visit City,Visit Country are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Contact_Information</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Phone) &amp;&amp; $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone or Visit Address is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Is_Customer_Footprint</fullName>
        <active>false</active>
        <description>when Account is Type of Customer some fields cannot be changed.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL(Type, &apos;Customer&apos;), 
  ISCHANGED( LG_Footprint__c ), 
  $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1
 )</errorConditionFormula>
        <errorDisplayField>LG_Footprint__c</errorDisplayField>
        <errorMessage>You are not allowed to change Footprint.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Is_Customer_KvK</fullName>
        <active>false</active>
        <description>Chamber of Commerce Number cannot be changed once it is filled.</description>
        <errorConditionFormula>AND( 
  ISCHANGED( LG_ChamberOfCommerceNumber__c ), 
  $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1
 )</errorConditionFormula>
        <errorDisplayField>LG_ChamberOfCommerceNumber__c</errorDisplayField>
        <errorMessage>You are not allowed to change Chamber Of Commerce Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Is_Customer_Name</fullName>
        <active>true</active>
        <description>when Account is Type of Customer some fields cannot be changed.</description>
        <errorConditionFormula>AND( 
  $RecordType.Name=&quot;Master&quot;,
  ISPICKVAL(Type, &apos;Customer&apos;), 
  ISCHANGED( Name ), 
  $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1
 )</errorConditionFormula>
        <errorDisplayField>LG_AccountBackendSource__c</errorDisplayField>
        <errorMessage>You are not allowed to change Account Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Is_Customer_Phone</fullName>
        <active>true</active>
        <description>when Account is Type of Customer some fields cannot be changed.</description>
        <errorConditionFormula>AND( 
  $RecordType.Name=&quot;Master&quot;,
  ISPICKVAL(Type, &apos;Customer&apos;), 
  ISCHANGED( Phone ), 
  $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1
 )</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>You are not allowed to change Phone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Is_Customer_PrimaryLocation</fullName>
        <active>true</active>
        <description>when Account is Type of Customer some fields cannot be changed.</description>
        <errorConditionFormula>AND( 
  $RecordType.Name=&quot;Master&quot;,
  ISPICKVAL(Type, &apos;Customer&apos;), 
  ISCHANGED( LG_PrimaryLocation__c ), 
  $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1
 )</errorConditionFormula>
        <errorDisplayField>LG_PrimaryLocation__c</errorDisplayField>
        <errorMessage>You are not allowed to change Primary Location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Is_Customer_Segment</fullName>
        <active>true</active>
        <description>when Account is Type of Customer some fields cannot be changed.</description>
        <errorConditionFormula>AND( 
  $RecordType.Name=&quot;Master&quot;,
  ISPICKVAL(Type, &apos;Customer&apos;), 
  ISCHANGED( LG_Segment__c ), 
  $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1
 )</errorConditionFormula>
        <errorDisplayField>LG_Segment__c</errorDisplayField>
        <errorMessage>You are not allowed to change Segment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Is_Customer_VisitAddress</fullName>
        <active>true</active>
        <description>when Account is Type of Customer some fields cannot be changed.</description>
        <errorConditionFormula>AND( 
  $RecordType.Name=&quot;Master&quot;,
  ISPICKVAL(Type, &apos;Customer&apos;), 
  OR( ISCHANGED( LG_VisitCity__c ), 
      ISCHANGED( LG_VisitCountry__c ), 
      ISCHANGED( LG_VisitHouseNumber__c ),
      ISCHANGED( LG_VisitHouseNumberExtension__c ),
      ISCHANGED( LG_VisitPostalCode__c ),
      ISCHANGED( LG_VisitStreet__c )),
    $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1
 )</errorConditionFormula>
        <errorDisplayField>LG_VisitStreet__c</errorDisplayField>
        <errorMessage>You are not allowed to change Visit Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Is_Customer_Website</fullName>
        <active>true</active>
        <description>when Account is Type of Customer some fields cannot be changed.</description>
        <errorConditionFormula>AND( 
  $RecordType.Name=&quot;Master&quot;,
  ISPICKVAL(Type, &apos;Customer&apos;), 
  ISCHANGED( Website ), 
  $Setup.LG_ProfileExtensions__c.LG_DWHUser__c  &lt;&gt; 1
 )</errorConditionFormula>
        <errorDisplayField>Website</errorDisplayField>
        <errorMessage>You are not allowed to change Website.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_KvK_Number_Lenght</fullName>
        <active>false</active>
        <description>Chamber of Commerce Number must have exactly 8 digits.</description>
        <errorConditionFormula>AND(
OR ( 
NOT(ISNUMBER( LG_ChamberOfCommerceNumber__c )), 
LEN( LG_ChamberOfCommerceNumber__c ) &lt;&gt; 6),
NOT(ISPICKVAL(Type, &apos;Partner&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>LG_ChamberOfCommerceNumber__c</errorDisplayField>
        <errorMessage>Chamber of Commerce Number must have 8 digits (numbers).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LG_Account_Type_Customer</fullName>
        <active>false</active>
        <errorConditionFormula>OR
( AND (
  ISCHANGED( Type ),
  ISPICKVAL( Type, &apos;Customer&apos; ),
  $Setup.LG_ProfileExtensions__c.LG_DWHUser__c &lt;&gt; 1),
  AND (
  text (PRIORVALUE( Type )) = &apos;Customer&apos;, 
  ISPICKVAL(Type, &apos;Qualified Lead&apos;))
)</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>You are not allowed to change Type to Customer/Qualified Lead.</errorMessage>
    </validationRules>
</CustomObject>